--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
 
     post {
         always {
-            sh 'echo "Pipeline complete."';
+            sh 'echo "Pipeline complete."'
         }
         failure {
             sh 'echo "Pipeline failed."'
